Fixes news preview full psot link on mobile screens

--- a/src/containers/Home/index.css
+++ b/src/containers/Home/index.css
@@ -138,7 +138,7 @@
   }  
 
   .postPreview .postLink {
-    font-size: 4vmin;
+    font-size: 4.5vmin;
     margin-bottom: 5vh;
   } 
 
